feat:grover search algorithm

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,11 @@ project(DbQa)
 
 set(CMAKE_CXX_STANDARD 23)
 
-add_executable(DbQa main.cpp)
+add_executable( DbQa
+        Matrix.h
+        Matrix.cpp
+        Qbit.h
+        Qbit.cpp
+        Grover.h
+        Grover.cpp
+)
